--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "setup-env": "node ../setup-env.js",
+    "setup": "npm run setup-env && npm install"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
