Fix development server DOM and icon errors
- Add DOM element existence check in main.tsx to prevent createRoot errors
- Create icon-192.png file to resolve missing icon 404 error
- Update manifest.json to include both SVG and PNG icons
- Development server now runs without DOM or icon errors

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -11,6 +11,11 @@
       "src": "/vite.svg",
       "sizes": "any",
       "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ]
 }
